12 June 2007: Wouter
	- num target queries was set to 0 at a bad time. Default it to 0 and
	  increase as target queries are done.
	- synthesize CNAME and DNAME responses from the cache.
	- Updated doxygen config for doxygen 1.5.
	- aclocal newer version.
	- doxygen 1.5 fixes for comments (for the strict check on docs).

11 June 2007: Wouter
	- replies on TCP queries have the address field set in replyinfo,
	  for serviced queries, because the initiator does not know that
	  a TCP fallback has occured.
	- omit DNSSEC types from nonDO replies, except if qtype is ANY or
	  if qtype directly queries for the type (and then only show that
	  'unknown type' in the answer section).
	- fixed message parsing where rrsigs on their own would be put
	  in the signature list over the rrsig type.

7 June 2007: Wouter
	- fixup error in double linked list insertion for subqueries and
	  for outbound list of serviced queries for iterator module.
	- nicer printout of outgoing port selection. 
	- fixup cname target readout.
	- nicer debug output.
	- fixup rrset counts when prepending CNAMEs to the answer.
	- fixup rrset TTL for prepended CNAMEs.
	- process better check for looping modules, and which submodule to
	  run next.
	- subreq insertion code fixup for slumber list.
	- VERB_DETAIL, verbosity: 2 level gives short but readable output.
	  VERB_ALGO, verbosity: 3 gives extensive output.
	- fixup RA bit in cached replies.
	- fixup CNAME responses from the cache no longer partial response.
	- error in network send handled without leakage.
	- enable ip6 from config, and try ip6 addresses if available,
	  if ip6 is not connected, skips to next server.

5 June 2007: Wouter
	- iterator state finished.
	- subrequests without parent store in cache and stop.
	- worker slumber list for ongoing promiscuous queries.
	- subrequest error handling.
	- priming failure returns SERVFAIL.
	- priming gives LAME result, returns SERVFAIL.
	- debug routine to print dns_msg as handled by iterator.